# ETHPredict

./: .env.example  .env.lighter.mainnet.example  .env.lighter.testnet.example  .gitignore  .gitmodules  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  Dockerfile  PROJECT_STATUS.md  README.md  TASKS.md  defillama_data.py  docker-compose-dev.yml  ensemble.py  ethpredict-current-pipeline.html  label.py  main.py  model.py  preprocess.py  pyproject.toml  requirements.txt  run.py  runner.py  setup.py  setup_and_test.py  signal.md  train.py
configs/: backtest.yml  base.yml  config.yml  config_legacy.yml  lighter_experiments.yml  lighter_trading.yml  model.yml  schema.yaml  sim.yml  staged_trial_small_next_hour.yml  staged_trial_small_triple_barrier.yml  staged_trial_smoke.yml
context/: DependencyContext.md  WIPOverview.md  lighter_data_setup.md  lighter_integration.md  prd_on_chain_market_making_experiment_matrix.md
data/: defillama_eth_chain_tvl_2025_04-05.csv  defillama_eth_top10_snapshots_2025_04-05.csv  santiment_metrics_april_may_2025.csv  schema.json
docker/: compose.yaml
examples/: experiment_example.py
results/: baseline_performance.csv  datasource_matrix.csv  feature_statistics.csv  label_statistics.csv  model_comparison.csv  prototype.py  signal_design.md
scripts/: binance_data.py  data_setup.py  get_eth_data.py  lighter_collect_data.py  lighter_export_example_config.py  lighter_perp_functionality_check.py  lighter_place_test_order.py  lighter_subaccount_ops.py  lighter_trading_setup.py  santiment_data.py
src/: csv_loader.py  experiment_orchestrator.py  (+3 more)
(+75 files in other folders)
