[project]
name = "ethpredict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=5.3.0",
    "ccxt>=3.0.0",
    "joblib>=1.3.0",
    "jsonschema>=4.0.0",
    "lighter-sdk",
    "loguru>=0.7.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "optuna>=3.0.0",
    "pandas>=1.5.0",
    "plotly>=5.15.0",
    "psutil>=5.9.0",
    "pyarrow>=7.0.0",
    "pydantic>=2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-binance>=1.0.16",
    "python-dotenv>=0.21.0",
    "pyyaml>=6.0",
    "ray>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "ta>=0.10.0",
    "timesfm>=2.0.1",
    "torch>=2.11.0",
    "tqdm>=4.64.0",
    "trackio>=0.28.0",
    "typer[all]>=0.9.0",
    "yamale>=4.0",
    "yfinance>=0.2.0",
]

[tool.uv.sources]
lighter-sdk = { git = "https://github.com/elliottech/lighter-python.git" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
